WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166539
GraphicsContextCairo: setMiterLimit() is missing the DisplayListRecorder diversion
https://bugs.webkit.org/show_bug.cgi?id=166539
Summary
GraphicsContextCairo: setMiterLimit() is missing the DisplayListRecorder dive...
Zan Dobersek
Reported
2016-12-28 10:06:38 PST
GraphicsContextCairo: setMiterLimit() is missing the DisplayListRecorder diversion
Attachments
Patch
(1.55 KB, patch)
2016-12-28 10:12 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.44 KB, patch)
2017-01-01 08:13 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2016-12-28 10:12:42 PST
Created
attachment 297815
[details]
Patch
Michael Catanzaro
Comment 2
2016-12-28 11:12:21 PST
Comment on
attachment 297815
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=297815&action=review
The amount of code duplication between these classes is quite worrisome. Things are just going to get desynced again in the future. :/
> Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:1021 > + m_displayListRecorder->setMiterLimit(limit);
EWS is red: limit was not declared in this scope. The parameter is named differently here than in GraphicsContextCG.
Zan Dobersek
Comment 3
2017-01-01 08:08:52 PST
(In reply to
comment #2
)
> Comment on
attachment 297815
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=297815&action=review
> > The amount of code duplication between these classes is quite worrisome. > Things are just going to get desynced again in the future. :/ >
True, maybe a recording-specific GraphicsContext class could work.
> > Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:1021 > > + m_displayListRecorder->setMiterLimit(limit); > > EWS is red: limit was not declared in this scope. The parameter is named > differently here than in GraphicsContextCG.
Oops!
Zan Dobersek
Comment 4
2017-01-01 08:13:25 PST
Created
attachment 297873
[details]
Patch for landing
Zan Dobersek
Comment 5
2017-01-01 08:47:29 PST
Comment on
attachment 297873
[details]
Patch for landing Clearing flags on attachment: 297873 Committed
r210220
: <
http://trac.webkit.org/changeset/210220
>
Zan Dobersek
Comment 6
2017-01-01 08:47:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug