GraphicsContextCairo: setMiterLimit() is missing the DisplayListRecorder diversion https://bugs.webkit.org/show_bug.cgi?id=166539

Reviewed by Michael Catanzaro.

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::setMiterLimit): Call the setMiterLimit() method on the
m_displayListRecorder object when the GraphicsContext object is in recording mode.


Canonical link: https://commits.webkit.org/183780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210220 268f45cc-cd09-0410-ab3c-d52691b4dbfc